--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,7 @@ title = "Michiel van Dijk's academic website"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "www.michielvandijk.org/"
+baseurl = "https://nifty-kilby-b7b624.netlify.app/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
