--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -3,39 +3,33 @@
 #     desired widget in your `content/home/` folder.
 #   The weight parameter defines the order that the links will appear in.
 
-#[[main]]
-#  name = "Demo"
-#  url = "#hero"
-#  weight = 10
+[[main]]
+  name = "About"
+  url = "/about"
+  weight = 10
 
 [[main]]
   name = "Posts"
-  url = "#posts"
+  url = "/posts"
   weight = 20
 
 [[main]]
   name = "Projects"
-  url = "#projects"
+  url = "/projects"
   weight = 30
 
 [[main]]
   name = "Publications"
-  url = "#featured"
+  url = "/featured"
   weight = 40
 
-#[[main]]
-#  name = "Courses"
-#  url = "courses/"
-#  weight = 50
-
+[[main]]
+  name = "Resume"
+  url = "/resume"
+  weight = 50
+  
 [[main]]
   name = "Contact"
-  url = "#contact"
+  url = "/contact"
   weight = 60
 
-# Link to a PDF of your resume/CV from the menu.
-# To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
-[[main]]
-    name = "About"
-    url = "#About"
-    weight = 70
