--- a/netlify.toml
+++ b/netlify.toml
@@ -5,7 +5,7 @@
   publish = "public"
 
 [build.environment]
-  HUGO_THEME = "repo"
+  HUGO_THEME = "academic"
   HUGO_VERSION = "0.73.0"
   HUGO_ENABLEGITINFO = "true"
 
