--- a/netlify.toml
+++ b/netlify.toml
@@ -5,12 +5,12 @@
   publish = "public"
 
 [build.environment]
-  HUGO_THEME = "academic"
   HUGO_VERSION = "0.73.0"
   HUGO_ENABLEGITINFO = "true"
 
 [context.production.environment]
   HUGO_ENV = "production"
+  HUGO_VERSION = "0.73.0"
 
 [context.deploy-preview]
   command = "hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL --themesDir ../../"
