--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -4,32 +4,42 @@
 #   The weight parameter defines the order that the links will appear in.
 
 [[main]]
-  name = "About Me"
-  url = "/about"
+  name = "Research"
+  url = "/research"
   weight = 10
 
-[[main]]
-  name = "Blog"
-  url = "/post"
-  weight = 20
+#[[main]]
+#  name = "Blog"
+#  url = "/post"
+#  weight = 10
 
-[[main]]
-  name = "Projects"
-  url = "/projects"
-  weight = 30
+#[[main]]
+#  name = "Projects"
+#  url = "/projects"
+#  weight = 20
 
 [[main]]
   name = "Publications"
   url = "/publication"
-  weight = 40
+  weight = 30
+
+#[[main]]
+#  name = "Resources"
+#  url = "/resources"
+#  weight = 40
+
+[[main]]
+  name = "Bio"
+  url = "/bio"
+  weight = 50
 
 [[main]]
   name = "CV"
   url = "cv/cv_michiel_van_dijk.pdf"
-  weight = 50
+  weight = 60
   
 [[main]]
   name = "Contact"
   url = "/contact"
-  weight = 60
+  weight = 70
 
