--- a/config.toml
+++ b/config.toml
@@ -44,8 +44,9 @@ ignoreFiles = ["\\.ipynb$", ".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "
   tags = "/tag/:slug/"
   categories = "/category/:slug/"
   publication_types = "/publication-type/:slug/"
+  publication = "/publication/:slug/"
   post = "/:year/:month/:day/:slug/"
-  project = "/:slug/"
+  project = "/project/:slug/"
 
 [outputs]
   home = [ "HTML", "RSS", "JSON", "WebAppManifest" ]
