--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -35,7 +35,7 @@
 
 [[main]]
   name = "CV"
-  url = "cv/cv_michiel_van_dijk.pdf"
+  url = "cv/michiel_van_dijk_cv_long.pdf"
   weight = 60
   
 [[main]]
